<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.lehuyduc.session3.MainActivity">

    <TextView
        android:id="@+id/tv_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/oncreate"
        />

    <TextView
        android:id="@+id/tv_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_create"
        android:text="@string/onstart"
        />

    <TextView
        android:id="@+id/tv_restart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_start"
        android:text="@string/onrestart"
        />

    <TextView
        android:id="@+id/tv_resume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_restart"
        android:text="@string/onresume"
        />

    <TextView
        android:id="@+id/tv_pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_resume"
        android:text="@string/onpause"
        />

    <TextView
        android:id="@+id/tv_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_pause"
        android:text="@string/onstop"
        />

    <TextView
        android:id="@+id/tv_destroy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_stop"
        android:text="@string/ondestroy"
        />

    <Button
        android:id="@+id/bt_goto2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_destroy"
        android:layout_centerHorizontal="true"
        android:text="@string/go_to_second_activity"
        />

    <Button
        android:id="@+id/bt_goto3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bt_goto2"
        android:layout_centerHorizontal="true"
        android:text="@string/go_to_activity_3"
        />


</RelativeLayout>
