<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_second"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorAccent"
    tools:context="com.example.lehuyduc.session3.SecondActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/second_activity"
        />

    <TextView
        android:id="@+id/tv_create2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/oncreate"
        />

    <TextView
        android:id="@+id/tv_start2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_create2"
        android:text="@string/onstart"
        />

    <TextView
        android:id="@+id/tv_restart2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_start2"
        android:text="@string/onrestart"
        />

    <TextView
        android:id="@+id/tv_resume2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_restart2"
        android:text="@string/onresume"
        />

    <TextView
        android:id="@+id/tv_pause2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_resume2"
        android:text="@string/onpause"
        />

    <TextView
        android:id="@+id/tv_stop2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_pause2"
        android:text="@string/onstop"
        />

    <TextView
        android:id="@+id/tv_destroy2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_stop2"
        android:text="@string/ondestroy"
        />

</RelativeLayout>
