<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_third"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimary"
    tools:context="com.example.lehuyduc.session3.ThirdActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/third_activity"
        />

    <EditText
        android:id="@+id/et_minute_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"
        android:hint="@string/minute"
        />

    <EditText
        android:id="@+id/et_second_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="50dp"
        android:hint="@string/second"
        />

    <Button
        android:id="@+id/bt_start_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_minute_counter"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="70dp"
        android:text="@string/start_timer"
        />

    <Button
        android:id="@+id/bt_stop_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_second_counter"
        android:layout_marginStart="180dp"
        android:layout_marginLeft="180dp"
        android:text="@string/stop_timer"
        />

</RelativeLayout>
